--- a/Utils/uniteditor/uniteditor.lpi
+++ b/Utils/uniteditor/uniteditor.lpi
@@ -33,7 +33,7 @@
         <UnitName Value="uniteditor"/>
         <CursorPos X="2" Y="10"/>
         <TopLine Value="1"/>
-        <UsageCount Value="33"/>
+        <UsageCount Value="34"/>
       </Unit0>
       <Unit1>
         <Filename Value="unit1.pas"/>
@@ -41,10 +41,10 @@
         <ComponentName Value="Form1"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
-        <CursorPos X="23" Y="149"/>
-        <TopLine Value="134"/>
+        <CursorPos X="30" Y="181"/>
+        <TopLine Value="165"/>
         <EditorIndex Value="0"/>
-        <UsageCount Value="33"/>
+        <UsageCount Value="34"/>
         <Loaded Value="True"/>
       </Unit1>
       <Unit2>
@@ -74,119 +74,127 @@
         <UsageCount Value="12"/>
       </Unit5>
     </Units>
-    <JumpHistory Count="28" HistoryIndex="27">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="unit1.pas"/>
-        <Caret Line="51" Column="21" TopLine="49"/>
+        <Caret Line="133" Column="17" TopLine="118"/>
       </Position1>
       <Position2>
         <Filename Value="unit1.pas"/>
-        <Caret Line="176" Column="24" TopLine="158"/>
+        <Caret Line="11" Column="8" TopLine="6"/>
       </Position2>
       <Position3>
         <Filename Value="unit1.pas"/>
-        <Caret Line="30" Column="44" TopLine="16"/>
+        <Caret Line="160" Column="5" TopLine="144"/>
       </Position3>
       <Position4>
         <Filename Value="unit1.pas"/>
-        <Caret Line="16" Column="87" TopLine="1"/>
+        <Caret Line="159" Column="5" TopLine="143"/>
       </Position4>
       <Position5>
         <Filename Value="unit1.pas"/>
-        <Caret Line="11" Column="1" TopLine="1"/>
+        <Caret Line="62" Column="19" TopLine="44"/>
       </Position5>
       <Position6>
         <Filename Value="unit1.pas"/>
-        <Caret Line="20" Column="14" TopLine="1"/>
+        <Caret Line="149" Column="31" TopLine="134"/>
       </Position6>
       <Position7>
         <Filename Value="unit1.pas"/>
-        <Caret Line="182" Column="41" TopLine="161"/>
+        <Caret Line="154" Column="37" TopLine="140"/>
       </Position7>
       <Position8>
         <Filename Value="unit1.pas"/>
-        <Caret Line="11" Column="12" TopLine="1"/>
+        <Caret Line="190" Column="4" TopLine="180"/>
       </Position8>
       <Position9>
         <Filename Value="unit1.pas"/>
-        <Caret Line="105" Column="10" TopLine="90"/>
+        <Caret Line="205" Column="5" TopLine="185"/>
       </Position9>
       <Position10>
         <Filename Value="unit1.pas"/>
-        <Caret Line="191" Column="4" TopLine="183"/>
+        <Caret Line="180" Column="3" TopLine="167"/>
       </Position10>
       <Position11>
         <Filename Value="unit1.pas"/>
-        <Caret Line="190" Column="8" TopLine="175"/>
+        <Caret Line="189" Column="14" TopLine="174"/>
       </Position11>
       <Position12>
         <Filename Value="unit1.pas"/>
-        <Caret Line="203" Column="41" TopLine="184"/>
+        <Caret Line="181" Column="3" TopLine="174"/>
       </Position12>
       <Position13>
         <Filename Value="unit1.pas"/>
-        <Caret Line="190" Column="7" TopLine="175"/>
+        <Caret Line="189" Column="18" TopLine="47"/>
       </Position13>
       <Position14>
         <Filename Value="unit1.pas"/>
-        <Caret Line="203" Column="42" TopLine="184"/>
+        <Caret Line="190" Column="18" TopLine="34"/>
       </Position14>
       <Position15>
         <Filename Value="unit1.pas"/>
-        <Caret Line="204" Column="20" TopLine="184"/>
+        <Caret Line="191" Column="15" TopLine="186"/>
       </Position15>
       <Position16>
         <Filename Value="unit1.pas"/>
-        <Caret Line="190" Column="7" TopLine="103"/>
+        <Caret Line="199" Column="18" TopLine="176"/>
       </Position16>
       <Position17>
         <Filename Value="unit1.pas"/>
-        <Caret Line="194" Column="7" TopLine="1"/>
+        <Caret Line="168" Column="6" TopLine="138"/>
       </Position17>
       <Position18>
         <Filename Value="unit1.pas"/>
-        <Caret Line="147" Column="7" TopLine="129"/>
+        <Caret Line="161" Column="14" TopLine="146"/>
       </Position18>
       <Position19>
         <Filename Value="unit1.pas"/>
-        <Caret Line="133" Column="17" TopLine="111"/>
+        <Caret Line="166" Column="2" TopLine="159"/>
       </Position19>
       <Position20>
         <Filename Value="unit1.pas"/>
-        <Caret Line="147" Column="1" TopLine="127"/>
+        <Caret Line="163" Column="8" TopLine="59"/>
       </Position20>
       <Position21>
         <Filename Value="unit1.pas"/>
-        <Caret Line="11" Column="17" TopLine="1"/>
+        <Caret Line="162" Column="8" TopLine="132"/>
       </Position21>
       <Position22>
         <Filename Value="unit1.pas"/>
-        <Caret Line="133" Column="17" TopLine="118"/>
+        <Caret Line="161" Column="8" TopLine="132"/>
       </Position22>
       <Position23>
         <Filename Value="unit1.pas"/>
-        <Caret Line="11" Column="8" TopLine="6"/>
+        <Caret Line="160" Column="8" TopLine="132"/>
       </Position23>
       <Position24>
         <Filename Value="unit1.pas"/>
-        <Caret Line="160" Column="5" TopLine="144"/>
+        <Caret Line="159" Column="8" TopLine="132"/>
       </Position24>
       <Position25>
         <Filename Value="unit1.pas"/>
-        <Caret Line="159" Column="5" TopLine="143"/>
+        <Caret Line="172" Column="6" TopLine="158"/>
       </Position25>
       <Position26>
         <Filename Value="unit1.pas"/>
-        <Caret Line="62" Column="19" TopLine="44"/>
+        <Caret Line="192" Column="6" TopLine="185"/>
       </Position26>
       <Position27>
         <Filename Value="unit1.pas"/>
-        <Caret Line="149" Column="31" TopLine="134"/>
+        <Caret Line="173" Column="12" TopLine="158"/>
       </Position27>
       <Position28>
         <Filename Value="unit1.pas"/>
-        <Caret Line="154" Column="37" TopLine="140"/>
+        <Caret Line="194" Column="33" TopLine="179"/>
       </Position28>
+      <Position29>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="12" Column="15" TopLine="1"/>
+      </Position29>
+      <Position30>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="194" Column="42" TopLine="185"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
