--- a/Utils/FontEditor/FontEditor.lpi
+++ b/Utils/FontEditor/FontEditor.lpi
@@ -6,7 +6,6 @@
     <General>
       <MainUnit Value="0"/>
       <TargetFileExt Value=".exe"/>
-      <Icon Value="0"/>
       <UseXPManifest Value="True"/>
       <ActiveEditorIndexAtStart Value="1"/>
     </General>
@@ -24,7 +23,7 @@
     <RunParams>
       <local>
         <FormatVersion Value="1"/>
-        <LaunchingApplication PathPlusParams="/usr/X11R6/bin/xterm -T 'Lazarus Run Output' -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
+        <LaunchingApplication PathPlusParams="\usr\X11R6\bin\xterm -T 'Lazarus Run Output' -e $(LazarusDir)\tools\runwait.sh $(TargetCmdLine)"/>
       </local>
     </RunParams>
     <RequiredPackages Count="1">
@@ -49,8 +48,8 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="umain"/>
-        <CursorPos X="31" Y="76"/>
-        <TopLine Value="62"/>
+        <CursorPos X="25" Y="9"/>
+        <TopLine Value="1"/>
         <EditorIndex Value="1"/>
         <UsageCount Value="61"/>
         <Loaded Value="True"/>
@@ -65,7 +64,7 @@
         <Filename Value="Constants.pas"/>
         <UnitName Value="Constants"/>
         <CursorPos X="29" Y="16"/>
-        <TopLine Value="6"/>
+        <TopLine Value="5"/>
         <EditorIndex Value="2"/>
         <UsageCount Value="29"/>
         <Loaded Value="True"/>
@@ -95,9 +94,7 @@
         <UnitName Value="KromUtils"/>
         <CursorPos X="6" Y="418"/>
         <TopLine Value="418"/>
-        <EditorIndex Value="3"/>
         <UsageCount Value="20"/>
-        <Loaded Value="True"/>
       </Unit7>
       <Unit8>
         <Filename Value="..\..\..\wr-toolkit\_Common_\kromUtils.pas"/>
@@ -149,123 +146,123 @@
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="umain.pas"/>
-        <Caret Line="372" Column="65" TopLine="347"/>
+        <Caret Line="11" Column="38" TopLine="1"/>
       </Position1>
       <Position2>
         <Filename Value="umain.pas"/>
-        <Caret Line="18" Column="21" TopLine="1"/>
+        <Caret Line="532" Column="3" TopLine="508"/>
       </Position2>
       <Position3>
         <Filename Value="umain.pas"/>
-        <Caret Line="207" Column="42" TopLine="190"/>
+        <Caret Line="210" Column="1" TopLine="199"/>
       </Position3>
       <Position4>
         <Filename Value="umain.pas"/>
-        <Caret Line="206" Column="38" TopLine="192"/>
+        <Caret Line="536" Column="20" TopLine="508"/>
       </Position4>
       <Position5>
         <Filename Value="umain.pas"/>
-        <Caret Line="11" Column="38" TopLine="1"/>
+        <Caret Line="187" Column="25" TopLine="173"/>
       </Position5>
       <Position6>
         <Filename Value="umain.pas"/>
-        <Caret Line="532" Column="3" TopLine="508"/>
+        <Caret Line="23" Column="1" TopLine="1"/>
       </Position6>
       <Position7>
         <Filename Value="umain.pas"/>
-        <Caret Line="210" Column="1" TopLine="199"/>
+        <Caret Line="124" Column="27" TopLine="107"/>
       </Position7>
       <Position8>
         <Filename Value="umain.pas"/>
-        <Caret Line="536" Column="20" TopLine="508"/>
+        <Caret Line="195" Column="26" TopLine="178"/>
       </Position8>
       <Position9>
         <Filename Value="umain.pas"/>
-        <Caret Line="187" Column="25" TopLine="173"/>
+        <Caret Line="356" Column="13" TopLine="352"/>
       </Position9>
       <Position10>
-        <Filename Value="umain.pas"/>
-        <Caret Line="23" Column="1" TopLine="1"/>
+        <Filename Value="Constants.pas"/>
+        <Caret Line="16" Column="16" TopLine="6"/>
       </Position10>
       <Position11>
         <Filename Value="umain.pas"/>
-        <Caret Line="124" Column="27" TopLine="107"/>
+        <Caret Line="3" Column="8" TopLine="1"/>
       </Position11>
       <Position12>
         <Filename Value="umain.pas"/>
-        <Caret Line="195" Column="26" TopLine="178"/>
+        <Caret Line="340" Column="47" TopLine="316"/>
       </Position12>
       <Position13>
         <Filename Value="umain.pas"/>
-        <Caret Line="356" Column="13" TopLine="352"/>
+        <Caret Line="343" Column="27" TopLine="322"/>
       </Position13>
       <Position14>
-        <Filename Value="Constants.pas"/>
-        <Caret Line="16" Column="16" TopLine="6"/>
+        <Filename Value="umain.pas"/>
+        <Caret Line="335" Column="18" TopLine="327"/>
       </Position14>
       <Position15>
         <Filename Value="umain.pas"/>
-        <Caret Line="3" Column="8" TopLine="1"/>
+        <Caret Line="96" Column="67" TopLine="86"/>
       </Position15>
       <Position16>
         <Filename Value="umain.pas"/>
-        <Caret Line="340" Column="47" TopLine="316"/>
+        <Caret Line="345" Column="36" TopLine="331"/>
       </Position16>
       <Position17>
         <Filename Value="umain.pas"/>
-        <Caret Line="343" Column="27" TopLine="322"/>
+        <Caret Line="575" Column="109" TopLine="562"/>
       </Position17>
       <Position18>
         <Filename Value="umain.pas"/>
-        <Caret Line="335" Column="18" TopLine="327"/>
+        <Caret Line="346" Column="24" TopLine="332"/>
       </Position18>
       <Position19>
         <Filename Value="umain.pas"/>
-        <Caret Line="96" Column="67" TopLine="86"/>
+        <Caret Line="344" Column="46" TopLine="332"/>
       </Position19>
       <Position20>
         <Filename Value="umain.pas"/>
-        <Caret Line="345" Column="36" TopLine="331"/>
+        <Caret Line="561" Column="19" TopLine="556"/>
       </Position20>
       <Position21>
         <Filename Value="umain.pas"/>
-        <Caret Line="575" Column="109" TopLine="562"/>
+        <Caret Line="569" Column="39" TopLine="556"/>
       </Position21>
       <Position22>
         <Filename Value="umain.pas"/>
-        <Caret Line="346" Column="24" TopLine="332"/>
+        <Caret Line="196" Column="38" TopLine="184"/>
       </Position22>
       <Position23>
         <Filename Value="umain.pas"/>
-        <Caret Line="344" Column="46" TopLine="332"/>
+        <Caret Line="198" Column="38" TopLine="184"/>
       </Position23>
       <Position24>
         <Filename Value="umain.pas"/>
-        <Caret Line="561" Column="19" TopLine="556"/>
+        <Caret Line="218" Column="33" TopLine="201"/>
       </Position24>
       <Position25>
         <Filename Value="umain.pas"/>
-        <Caret Line="569" Column="39" TopLine="556"/>
+        <Caret Line="21" Column="7" TopLine="7"/>
       </Position25>
       <Position26>
         <Filename Value="umain.pas"/>
-        <Caret Line="196" Column="38" TopLine="184"/>
+        <Caret Line="68" Column="48" TopLine="54"/>
       </Position26>
       <Position27>
         <Filename Value="umain.pas"/>
-        <Caret Line="198" Column="38" TopLine="184"/>
+        <Caret Line="76" Column="31" TopLine="1"/>
       </Position27>
       <Position28>
         <Filename Value="umain.pas"/>
-        <Caret Line="218" Column="33" TopLine="201"/>
+        <Caret Line="8" Column="22" TopLine="1"/>
       </Position28>
       <Position29>
         <Filename Value="umain.pas"/>
-        <Caret Line="21" Column="7" TopLine="7"/>
+        <Caret Line="9" Column="3" TopLine="1"/>
       </Position29>
       <Position30>
         <Filename Value="umain.pas"/>
-        <Caret Line="68" Column="48" TopLine="54"/>
+        <Caret Line="20" Column="71" TopLine="4"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -273,8 +270,8 @@
     <Version Value="8"/>
     <PathDelim Value="\"/>
     <SearchPaths>
-      <IncludeFiles Value="..\..\ Common \"/>
-      <OtherUnitFiles Value="..\..\ Common \"/>
+      <IncludeFiles Value="..\..\Common\"/>
+      <OtherUnitFiles Value="..\..\Common\"/>
     </SearchPaths>
     <Other>
       <CompilerPath Value="$(CompPath)"/>
