--- a/Utils/TileResampler/TilesetResampler.lpi
+++ b/Utils/TileResampler/TilesetResampler.lpi
@@ -1,19 +1,21 @@
 <?xml version="1.0"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="7"/>
+    <Version Value="9"/>
     <General>
       <MainUnit Value="0"/>
-      <TargetFileExt Value=""/>
-      <Icon Value="0"/>
       <UseXPManifest Value="True"/>
-      <ActiveEditorIndexAtStart Value="0"/>
+      <Icon Value="0"/>
+      <ActiveWindowIndexAtStart Value="0"/>
     </General>
     <VersionInfo>
-      <ProjectVersion Value=""/>
       <Language Value=""/>
       <CharSet Value=""/>
+      <StringTable ProductVersion=""/>
     </VersionInfo>
+    <BuildModes Count="1">
+      <Item1 Name="default" Default="True"/>
+    </BuildModes>
     <PublishOptions>
       <Version Value="2"/>
       <IgnoreBinaries Value="False"/>
@@ -35,10 +37,13 @@
       <Unit0>
         <Filename Value="TilesetResampler.lpr"/>
         <IsPartOfProject Value="True"/>
-        <CursorPos X="1" Y="1"/>
+        <EditorIndex Value="1"/>
+        <WindowIndex Value="0"/>
         <TopLine Value="1"/>
-        <UsageCount Value="24"/>
+        <CursorPos X="1" Y="15"/>
         <SyntaxHighlighter Value="Delphi"/>
+        <UsageCount Value="24"/>
+        <Loaded Value="True"/>
       </Unit0>
       <Unit1>
         <Filename Value="Unit1.pas"/>
@@ -47,158 +52,171 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
-        <CursorPos X="39" Y="9"/>
-        <TopLine Value="1"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="0"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="167"/>
+        <CursorPos X="1" Y="32"/>
         <UsageCount Value="24"/>
         <Loaded Value="True"/>
+        <LoadedDesigner Value="True"/>
       </Unit1>
       <Unit2>
         <Filename Value="../../Common/ZLIBEX.PAS"/>
         <UnitName Value="ZLibEx"/>
-        <CursorPos X="16" Y="1004"/>
+        <EditorIndex Value="2"/>
+        <WindowIndex Value="0"/>
         <TopLine Value="988"/>
-        <EditorIndex Value="1"/>
+        <CursorPos X="16" Y="1004"/>
         <UsageCount Value="11"/>
         <Loaded Value="True"/>
       </Unit2>
       <Unit3>
         <Filename Value="../../../../../../Downloads/ZLIBEX.PAS"/>
         <UnitName Value="ZLibEx"/>
-        <CursorPos X="1" Y="1"/>
         <TopLine Value="81"/>
+        <CursorPos X="1" Y="1"/>
         <UsageCount Value="10"/>
       </Unit3>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="10" Column="31" TopLine="7"/>
+        <Caret Line="10" Column="40" TopLine="3"/>
       </Position1>
       <Position2>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="8" Column="70" TopLine="1"/>
+        <Caret Line="129" Column="37" TopLine="113"/>
       </Position2>
       <Position3>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="122" Column="96" TopLine="106"/>
+        <Filename Value="../../Common/ZLIBEX.PAS"/>
+        <Caret Line="1" Column="1" TopLine="1"/>
       </Position3>
       <Position4>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="10" Column="40" TopLine="3"/>
+        <Filename Value="../../Common/ZLIBEX.PAS"/>
+        <Caret Line="49" Column="39" TopLine="41"/>
       </Position4>
       <Position5>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="129" Column="37" TopLine="113"/>
+        <Caret Line="113" Column="5" TopLine="105"/>
       </Position5>
       <Position6>
-        <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="1" Column="1" TopLine="1"/>
+        <Filename Value="Unit1.pas"/>
+        <Caret Line="116" Column="16" TopLine="111"/>
       </Position6>
       <Position7>
-        <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="49" Column="39" TopLine="41"/>
+        <Filename Value="Unit1.pas"/>
+        <Caret Line="115" Column="6" TopLine="100"/>
       </Position7>
       <Position8>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="113" Column="5" TopLine="105"/>
+        <Caret Line="10" Column="25" TopLine="1"/>
       </Position8>
       <Position9>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="116" Column="16" TopLine="111"/>
+        <Caret Line="113" Column="5" TopLine="103"/>
       </Position9>
       <Position10>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="115" Column="6" TopLine="100"/>
+        <Caret Line="111" Column="45" TopLine="95"/>
       </Position10>
       <Position11>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="10" Column="25" TopLine="1"/>
+        <Caret Line="112" Column="41" TopLine="96"/>
       </Position11>
       <Position12>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="113" Column="5" TopLine="103"/>
+        <Caret Line="10" Column="18" TopLine="1"/>
       </Position12>
       <Position13>
         <Filename Value="Unit1.pas"/>
         <Caret Line="111" Column="45" TopLine="95"/>
       </Position13>
       <Position14>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="112" Column="41" TopLine="96"/>
+        <Filename Value="../../Common/ZLIBEX.PAS"/>
+        <Caret Line="285" Column="1" TopLine="39"/>
       </Position14>
       <Position15>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="10" Column="18" TopLine="1"/>
+        <Filename Value="../../Common/ZLIBEX.PAS"/>
+        <Caret Line="1" Column="1" TopLine="1"/>
       </Position15>
       <Position16>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="111" Column="45" TopLine="95"/>
+        <Filename Value="../../Common/ZLIBEX.PAS"/>
+        <Caret Line="92" Column="2" TopLine="76"/>
       </Position16>
       <Position17>
         <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="285" Column="1" TopLine="39"/>
+        <Caret Line="595" Column="13" TopLine="579"/>
       </Position17>
       <Position18>
         <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="1" Column="1" TopLine="1"/>
+        <Caret Line="596" Column="9" TopLine="579"/>
       </Position18>
       <Position19>
         <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="92" Column="2" TopLine="76"/>
+        <Caret Line="594" Column="1" TopLine="579"/>
       </Position19>
       <Position20>
         <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="595" Column="13" TopLine="579"/>
+        <Caret Line="595" Column="4" TopLine="579"/>
       </Position20>
       <Position21>
         <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="596" Column="9" TopLine="579"/>
+        <Caret Line="867" Column="13" TopLine="851"/>
       </Position21>
       <Position22>
         <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="594" Column="1" TopLine="579"/>
+        <Caret Line="880" Column="13" TopLine="864"/>
       </Position22>
       <Position23>
         <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="595" Column="4" TopLine="579"/>
+        <Caret Line="898" Column="14" TopLine="882"/>
       </Position23>
       <Position24>
-        <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="867" Column="13" TopLine="851"/>
+        <Filename Value="Unit1.pas"/>
+        <Caret Line="9" Column="38" TopLine="1"/>
       </Position24>
       <Position25>
-        <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="880" Column="13" TopLine="864"/>
+        <Filename Value="Unit1.pas"/>
+        <Caret Line="10" Column="18" TopLine="1"/>
       </Position25>
       <Position26>
-        <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="898" Column="14" TopLine="882"/>
+        <Filename Value="Unit1.pas"/>
+        <Caret Line="176" Column="3" TopLine="152"/>
       </Position26>
       <Position27>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="9" Column="38" TopLine="1"/>
+        <Caret Line="148" Column="5" TopLine="136"/>
       </Position27>
       <Position28>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="10" Column="18" TopLine="1"/>
+        <Caret Line="9" Column="39" TopLine="1"/>
       </Position28>
       <Position29>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="176" Column="3" TopLine="152"/>
+        <Filename Value="TilesetResampler.lpr"/>
+        <Caret Line="1" Column="1" TopLine="1"/>
       </Position29>
       <Position30>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="148" Column="5" TopLine="136"/>
+        <Filename Value="TilesetResampler.lpr"/>
+        <Caret Line="15" Column="1" TopLine="1"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
-    <Version Value="8"/>
+    <Version Value="9"/>
     <SearchPaths>
-      <OtherUnitFiles Value="/home/vytautas/bin/castlesand/branches/Unix/Common/"/>
+      <IncludeFiles Value="$(ProjOutDir)"/>
+      <OtherUnitFiles Value="../../Common"/>
     </SearchPaths>
+    <Parsing>
+      <SyntaxOptions>
+        <UseAnsiStrings Value="False"/>
+      </SyntaxOptions>
+    </Parsing>
     <Other>
+      <CompilerMessages>
+        <UseMsgFile Value="True"/>
+      </CompilerMessages>
       <CompilerPath Value="$(CompPath)"/>
     </Other>
   </CompilerOptions>
