--- a/Utils/TileResampler/TilesetResampler.cfg
+++ b/Utils/TileResampler/TilesetResampler.cfg
@@ -33,7 +33,7 @@
 -K$00400000
 -LE"c:\program files\borland\delphi6\Projects\Bpl"
 -LN"c:\program files\borland\delphi6\Projects\Bpl"
--U"..\ Common \"
--O"..\ Common \"
--I"..\ Common \"
--R"..\ Common \"
+-U"..\..\Common\;..\..\Common\zlib"
+-O"..\..\Common\;..\..\Common\zlib"
+-I"..\..\Common\;..\..\Common\zlib"
+-R"..\..\Common\;..\..\Common\zlib"
